2003-10-20  Till Kamppeter <till.kamppeter@gmx.net>

	* configure.in: *BSD compatibility fix (thanks to Patrick Powell
	  from LPRng).

	* driver/ljetplus.xml, driver/ljet4.xml, driver/ljet4d.xml,
	  driver/ljet3.xml, driver/ljet3d.xml, driver/ljet2p.xml,
	  driver/lj4dithp.xml, driver/laserjet.xml, driver/cljet5.xml:
	  Applied patch from Patrick Powell to let the Perl one-liner for
	  the paper tray selection not read from newline to newline but
	  from ESC to ESC. This prevents from too long "lines" being read
	  into memory.

	* driver/Postscript.xml, driver/oki4w.xml: Fixes for BSD (does not
	  understand "echo -en ..."). Thanks to Bruce J.A. Nourish (bjan
	  at bjan dot net).

2003-10-09  David Suffield <david.suffield@hp.com>

	* Added new printers to db/source/printer/
	  HP-Color_LaserJet_3500.xml HP-DeskJet_3520.xml
	  HP-DeskJet_3528.xml HP-DeskJet_3550.xml HP-DeskJet_3558.xml
	  HP-DeskJet_3650.xml HP-DeskJet_3658.xml HP-DeskJet_3668.xml
	
2003-10-08  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Samsung-ML-1650.xml, printer/Samsung-ML-1651N.xml,
	  driver/pxlmono.xml, driver/lj5gray.xml, driver/lj5mono.xml,
	  driver/ljet4.xml, driver/lj4dith.xml, driver/Postscript.xml,
	  opt/159.xml, opt/160.xml, opt/pjl-Samsung-ML-1650-RET.xml,
	  opt/pjl-Samsung-ML-1650-MediaType.xml,
	  opt/pjl-Samsung-ML-1650-Economode.xml,
	  opt/pjl-Samsung-ML-1650-AllowReprint.xml,
	  opt/pxlmono-PrinterResolution.xml: Added Samsung ML-1650 and
	  1651N.

2003-10-03  David Suffield <david.suffield@hp.com>

        * Added new printers to db/source/printer/
	  HP-DeskJet_5158.xml HP-DeskJet_5160.xml HP-DeskJet_5650.xml
	  HP-DeskJet_5670.xml HP-DeskJet_5850.xml HP-DeskJet_9600.xml
	  HP-OfficeJet_4100.xml HP-OfficeJet_5500.xml
	  HP-OfficeJet_6100.xml HP-OfficeJet_6150.xml
	  HP-OfficeJet_7100.xml HP-PhotoSmart_140.xml
	  HP-PhotoSmart_240.xml HP-PhotoSmart_7260.xml
	  HP-PhotoSmart_7268.xml HP-PhotoSmart_7660.xml