@@ -1,0 +1,58 @@
+<printer id="printer/Epson-Stylus_C64">
+  <make>Epson</make>
+  <model>Stylus C64</model>
+  <mechanism>
+    <inkjet/>
+    <color/>
+    <resolution>
+      <dpi>
+        <x>2880</x>
+        <y>1440</y>
+      </dpi>
+    </resolution>
+    <consumables>
+      <comments>
+        <en>Four separately changable cartridges for black and the
+	colours</en>
+      </comments>
+      <!--one or more "partno" elements.-->
+    </consumables>
+  </mechanism>
+  <url></url>
+  <lang>
+    <escp/><!--no pjl-->
+  </lang>
+  <autodetect>
+  </autodetect>
+  <functionality>B</functionality>
+  <driver>gimp-print-ijs</driver>
+  <!--verified-->
+  <!--no "contrib_url"-->
+  <comments>
+    <en>
+
+    Similar to the Epson Stylus C84, but slower and cheaper. C63, C64,
+    and PX V500 are the same, C64 is the name for the US market, PX
+    V500 for Japan, and C64 for the rest of the world. These printers
+    are also capable of full-bleed (borderless) printing.&lt;p&gt;
+
+    Parallel and USB ports.&lt;p&gt;
+
+    Needs GIMP-Print 4.3.21 or 4.2.6pre2 (or newer versions), this
+    printer does not work with the drivers for the C82 or
+    C84.&lt;p&gt;
+
+    This printer cannot be tested by sending plain text to it, as the
+    printer may or may not respond to the text.  The recommended way
+    to test the connection is by checking the ink level with the
+    &lt;tt&gt;escputil&lt;/tt&gt; command as follows:&lt;p&gt;
+
+    &lt;tt&gt;escputil -i -u -r /dev/lp0&lt;/tt&gt;&lt;p&gt;
+
+    where /dev/lp0 should be replaced with the name of your printer
+    port.&lt;p&gt;
+
+    </en>
+  </comments>
+</printer>
+
