@@ -1,0 +1,48 @@
+<printer id="printer/Epson-Stylus_CX6400">
+  <make>Epson</make>
+  <model>Stylus CX6400</model>
+  <mechanism>
+    <inkjet/>
+    <color/>
+    <resolution>
+      <dpi>
+        <x>2880</x>
+        <y>1440</y>
+      </dpi>
+    </resolution>
+    <consumables>
+    <!--no comments--><!--one or more "partno" elements.--></consumables>
+  </mechanism>
+  <url></url>
+  <lang>
+    <escp/><!--no pjl-->
+    <text>
+      <charset>us-ascii</charset>
+    </text>
+  </lang>
+  <autodetect>
+  </autodetect>
+  <functionality>D</functionality>
+  <driver>gimp-print-ijs</driver>
+  <!--verified-->
+  <!--no "contrib_url"-->
+  <comments>
+    <en>
+
+    Multi-function device: Printer, Scanner, Copier.&lt;p&gt;
+
+    The printing engine is the one of the Epson Stylus C64, see that
+    printer entry for more info.&lt;p&gt;
+
+    Scanning should work as described for the Epson Stylus CX3200 and
+    CX5200. Unfortunately, noone confirmed yet whether the scanning
+    engine of this model is supported by &lt;a
+    href="http://www.sane-project.org/"&gt;SANE&lt;/a&gt;, therefore
+    this printer is listed as "Partially" working for now.&lt;p&gt;
+
+    Copying should just work with the front panel of the
+    device.&lt;p&gt;
+
+    </en>
+  </comments>
+</printer>
