@@ -1,3 +1,10 @@
+2003-10-27  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* printer/Epson-Stylus_C63.xml, printer/Epson-Stylus_C64.xml,
+	  printer/Epson-PX_V500.xml, printer/Epson-Stylus_CX6400.xml,
+	  printer/Epson-Stylus_CX8400.xml: Added new inkjet printers from
+	  Epson.
+
 2003-10-20  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* configure.in: *BSD compatibility fix (thanks to Patrick Powell
